syntax = "proto3";
package service.article.v1;
option go_package = "yuumi/api/service/article/v1;v1";

import "service/article/v1/pb_data.proto";

service CommentService {
  rpc Create (CreateCommentRequest) returns (CreateCommentReply) {}
  rpc Delete (DeleteCommentRequest) returns (DeleteCommentReply) {}
  rpc GetInfo (GetCommentInfoRequest) returns (GetCommentInfoReply) {}
  rpc GetList (GetCommentListRequest) returns (GetCommentListReply) {}
}


message CreateCommentRequest {
  string content = 1;
  int64 creator_id = 2;
  int64 article_id = 3;
}
message CreateCommentReply {
  CommentData comment = 1;
}

message DeleteCommentRequest {
  int64 id = 1;
}
message DeleteCommentReply {
  string message = 1;
}

message GetCommentInfoRequest {
  optional int64 id = 1;
  bool preload_creator = 51;
  bool preload_article = 52;
}
message GetCommentInfoReply {
  CommentData comment = 1;
}

message GetCommentListRequest {
  int64 page = 1;
  int64 page_size = 2;
  int64 article_id = 3;
  int64 creator_id = 4;
  bool preload_creator = 51;
  bool preload_article = 52;
}
message GetCommentListReply {
  repeated CommentData comments = 1;
  PaginationData pagination = 2;
}
